--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@ const liffId = "1656759337-L7ngD1pq";
         $(function () {
             $('form').submit(function () {
                 const name    = $('input[name="name"]').val();
-                const bangou = $('input[name="bangou"]').val();
-                const shushoujou  = $('input[name="shushoujou"]').val();
-                const keika  = $('input[name="keika"]').val();
-                const hatunetu = $('input[name="hatunetu"]').val();
-                const msg = `${name}\n${bangou}\n${shushoujou}\n${keika}\n${hatunetu}`;
+                const msg = `${name}`;
                 sendText(msg);
                 return false;
             });
