--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ const liffId = "1656759337-L7ngD1pq";
 <body>
 
     <form class="w-75 mx-auto">
-        <p class="mt-3">氏名(全角ひらがな)</p>
+<!--        <p class="mt-3">氏名(全角ひらがな)</p>
         <div>
             <input class="form-control w-100 mt-1" name="name" placeholder="" required>
         </div>
-        <input type="submit" class="mt-4 btn btn-primary" value="送信">
+--!>
+        <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
     </form>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -61,7 +62,7 @@ const liffId = "1656759337-L7ngD1pq";
             $('form').submit(function () {
                 const name    = $('input[name="name"]').val();
                 const msg = `${name}`;
-                sendText(msg);
+                sendText('問題');
                 return false;
             });
         });
