--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@ const liffId = "1656759337-L7ngD1pq";
                 return false;
             });
         });
-
-document.getElementById("sampleArea").innerHTML = key;
-
+$(function test(){
+var samplearea=document.getElementById("sampleArea")
+samplearea.innerHTML = key;
+});
     </script>
 <div id="sampleArea">サンプル</div>
 
