--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ var samplearea=document.getElementById("sampleArea")
 samplearea.innerHTML = key;
 };
     </script>
-<div id="sampleArea">サンプル</div>
+<div id="sampleArea"></div>
 
     <form class="w-75 mx-auto">
 <!--        <p class="mt-3">氏名(全角ひらがな)</p>
