--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@ const liffId = "1656759337-L7ngD1pq";
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
+    <script>
+        function test(){
+            var samplearea=document.getElementById("sampleArea")
+            samplearea.innerHTML = key;
+        };
+    </script>
+
 </head>
 <body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -51,13 +58,11 @@ const liffId = "1656759337-L7ngD1pq";
                 return false;
             });
         });
-function test(){
-var samplearea=document.getElementById("sampleArea")
-samplearea.innerHTML = key;
-};
     </script>
 <div id="sampleArea"></div>
+<div class="video">
 
+</div>
     <form class="w-75 mx-auto">
 <!--        <p class="mt-3">氏名(全角ひらがな)</p>
         <div>
