--- a/index.html
+++ b/index.html
@@ -56,11 +56,24 @@ const liffId = "1656759337-L7ngD1pq";
             samplearea.innerHTML = key;
         };
     </script>
+<script>
+function testa(){
+var ss=document.getElementById('aa')
+ss.innerHTML="cc"
+};
+</script>
 
 </head>
 <body>
 <div id="sampleArea">　</div>
 <div class="video">
+<div id='aa'>aa</div>
+<video onended='testa()'; "controls width="250">
+    <source src="https://developer.mozilla.org/ja/docs/Web/HTML/Element/video/media/cc0-videos/flower.mp4"
+            type="video/mp4">
+
+    Sorry, your browser doesn't support embedded videos.
+</video>
 
 </div>
     <form class="w-75 mx-auto">
