--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ ss.innerHTML="cc"
 <div class="video">
 <div id='aa'>aa</div>
 <video onended='testa()'; "controls width="250">
-    <source src="https://developer.mozilla.org/ja/docs/Web/HTML/Element/video/media/cc0-videos/flower.mp4"
+    <source src="https://www.youtube.com/embed/ZSaTxMkEHas"
             type="video/mp4">
 
     Sorry, your browser doesn't support embedded videos.
