--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@ ss.innerHTML="cc"
 </head>
 <body>
 <div id="sampleArea">　</div>
-<div class="video">
 <div id='aa'>aa</div>
-<video onended='testa()'; "controls width="250">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ZSaTxMkEHas" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<video "controls width="250">
     <source src="https://www.youtube.com/embed/ZSaTxMkEHas"
             type="video/mp4">
-
-    Sorry, your browser doesn't support embedded videos.
 </video>
 
-</div>
+
     <form class="w-75 mx-auto">
 <!--        <p class="mt-3">氏名(全角ひらがな)</p>
         <div>
