--- a/index.html
+++ b/index.html
@@ -12,23 +12,8 @@ const liffId = "1656759337-L7ngD1pq";
 </head>
 <body>
 <div id="sampleArea">　</div>
-<div id='aa'>vv</div>
 
-<iframe src="https://player.vimeo.com/video/66966424" width="213" height="120" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<script src="https://player.vimeo.com/api/player.js"></script>
-<script>
-    var iframe = document.querySelector('iframe');
-    var player = new Vimeo.Player(iframe);
-    player.on('play', function() {
-        alert('You have played the video')
-    });
-        player.on('ended', function(){
-        alert('Video play completed');
-    });
-    player.getVideoTitle().then(function(title) {
-        console.log('title:', title);
-    });
-</script>
+<iframe src="https://linevoom.line.me/post/_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k/1163920241201046620" width="213" height="120" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <form class="w-75 mx-auto">
 <!--        <p class="mt-3">氏名(全角ひらがな)</p>
@@ -79,8 +64,6 @@ const liffId = "1656759337-L7ngD1pq";
                 return false;
             });
         });
-    </script>
-    <script>
         function test(){
             var samplearea=document.getElementById("sampleArea")
             samplearea.innerHTML = key;
