--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ const liffId = "1656759337-L7ngD1pq";
 <body>
 <div id="sampleArea">　</div>
 
-<iframe src="https://linevoom.line.me/post/_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k/1163920241201046620" width="213" height="120" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
+<script defer src="https://linevoom.line.me/sdk/timelineJsSdk.min.js"></script>
 
     <form class="w-75 mx-auto">
 <!--        <p class="mt-3">氏名(全角ひらがな)</p>
