--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@ const liffId = "1656759337-L7ngD1pq";
                 return false;
             });
         });
-        function test(){
+<!--        function test(){
             var samplearea=document.getElementById("sampleArea")
             samplearea.innerHTML = key;
         };
+--!>
     </script>
 
 </body>
