--- a/index.html
+++ b/index.html
@@ -49,12 +49,9 @@ const liffId = "1656759337-L7ngD1pq";
                 window.alert('Failed to send message ' + error);
             });
         }
-var param = location.search
-
-alert(param)
-<!--        const params = (new URL(document.location)).searchParams;
+        const params = (new URL(document.location)).searchParams;
         const key = params.get('key');
---!>
+
         $(function () {
             $('form').submit(function () {
                 const name    = $('input[name="name"]').val();
