--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ const liffId = "1656759337-L7ngD1pq";
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
 </head>
 <body>
-<div id="sampleArea">　</div>
+<div id="sampleArea">aa</div>
 
 <blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
 <script defer src="https://linevoom.line.me/sdk/timelineJsSdk.min.js"></script>
