--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@ const liffId = "1656759337-L7ngD1pq";
         //パラメータ
         const params = (new URL(document.location)).searchParams;
         const key = params.get('key');
-        function test(){
-            var samplearea=document.getElementById("sampleArea")
-            samplearea.innerHTML = key;
-        };
-
         $(document).ready(function () {
             const liffId = "1656759337-L7ngD1pq";
             initializeLiff(liffId);
@@ -57,7 +52,12 @@ const liffId = "1656759337-L7ngD1pq";
 
 </head>
 <body>
-    <div id="sampleArea">aa</div>
+    <div id="sampleArea"></div>
+<script> function test(){
+            var samplearea=document.getElementById("sampleArea")
+            samplearea.innerHTML = key;
+        };
+</script>
     <form class="w-75 mx-auto">
      <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
     </form>
