--- a/index.html
+++ b/index.html
@@ -5,49 +5,23 @@ const liffId = "1656759337-L7ngD1pq";
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB問診票</title>
+    <title>Self-Study Chemistry 解説</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
-</head>
-<body>
-
-    <form class="w-75 mx-auto">
-        <p class="mt-3">氏名(全角ひらがな)</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="name" placeholder="" required>
-        </div>
-        <p class="mt-3">診察券番号(半角数字 不明の場合は"0")</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="bangou" required>
-        </div>
-        <p class="mt-3">一番お困りのことは?</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="shushoujou" required>
-        </div>
-        <p class="mt-3">いつからどのような様子ですか?</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="keika" required>
-        </div>
-        <p class="mt-3">37.5度以上の発熱の有無("はい" か "いいえ")</p>
-        <div>
-            <input class="form-control w-100 mt-1" name="hatunetu" required>
-        </div>
-        <input type="submit" class="mt-4 btn btn-primary" value="送信">
-    </form>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
-
+        //パラメータ
+        const params = (new URL(document.location)).searchParams;
+        const key = params.get('key');
         $(document).ready(function () {
-const liffId = "1656759337-L7ngD1pq";
+            const liffId = "1656759337-L7ngD1pq";
             initializeLiff(liffId);
         })
-
         function initializeLiff(liffId) {
             liff.init({
                 liffId: liffId
@@ -57,7 +31,6 @@ const liffId = "1656759337-L7ngD1pq";
                 console.log('LIFF Initialization failed ', err);
             });
         }
-
         function sendText(text) {
             liff.sendMessages([{
                 'type': 'text',
@@ -68,24 +41,27 @@ const liffId = "1656759337-L7ngD1pq";
                 window.alert('Failed to send message ' + error);
             });
         }
-
-        const params = (new URL(document.location)).searchParams;
-        const key = params.get('key');
-
         $(function () {
             $('form').submit(function () {
-                const name    = $('input[name="name"]').val();
-                const bangou = $('input[name="bangou"]').val();
-                const shushoujou  = $('input[name="shushoujou"]').val();
-                const keika  = $('input[name="keika"]').val();
-                const hatunetu = $('input[name="hatunetu"]').val();
-                const msg = `${name}\n${bangou}\n${shushoujou}\n${keika}\n${hatunetu}`;
-                sendText(msg);
+                sendText('問題');
                 return false;
             });
         });
-
     </script>
+    <script defer src="https://linevoom.line.me/sdk/timelineJsSdk.min.js"></script>
 
+</head>
+<body>
+    <div id="sampleArea">bb</div>
+<script> function test(){
+            var samplearea=document.getElementById("sampleArea")
+            samplearea.innerHTML = key;
+        };
+</script>
+    <form class="w-75 mx-auto">
+     <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
+    </form>
+    <blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
 </body>
 </html>
+
