--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@ const liffId = "1656759337-L7ngD1pq";
 </head>
 <body>
     <div id="sampleArea">bb</div>
-<script> function test(){
+<script>
+ function test(){
             var samplearea=document.getElementById("sampleArea")
             samplearea.innerHTML = key;
         };
 </script>
     <form class="w-75 mx-auto">
-     <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
+     <input type="submit" class="mt-4 btn btn-primary" value=key>
     </form>
     <blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
 </body>
