--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ const liffId = "1656759337-L7ngD1pq";
     <div id="sampleArea">bb</div>
 
     <form class="w-75 mx-auto">
-     <input type="submit" class="mt-4 btn btn-primary" value=key>
+     <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
     </form>
     <blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
 </body>
