--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@ const liffId = "1656759337-L7ngD1pq";
         });
     </script>
     <script defer src="https://linevoom.line.me/sdk/timelineJsSdk.min.js"></script>
-<script>
- function test(){
-            var samplearea=document.getElementById("sampleArea")
-            samplearea.innerHTML = key;
-        };
-</script>
+	<div id="div1">
+    <script>
+      let div1 = document.getElementById('sampleArea');
+			div1.insertAdjacentHTML('afterend', key);
+    </script>
 </head>
 <body>
     <div id="sampleArea">bb</div>
