--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@ const liffId = "1656759337-L7ngD1pq";
         });
     </script>
     <script defer src="https://linevoom.line.me/sdk/timelineJsSdk.min.js"></script>
-	<div id="div1">
+
     <script>
+    function test(){
       let div1 = document.getElementById('sampleArea');
 			div1.insertAdjacentHTML('afterend', key);
+    }
     </script>
 </head>
 <body>
