--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ const liffId = "1656759337-L7ngD1pq";
     <script>
     function test(){
       let div1 = document.getElementById('sampleArea');
-			div1.insertAdjacentHTML('afterend', key);
+			div1.insertAdjacentHTML('afterend', "key");
     }
     </script>
 </head>
