--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ const liffId = "1656759337-L7ngD1pq";
     </script>
 </head>
 <body>
-    <div id="sampleArea">bb</div>
+    <div id="sampleArea">bbaa</div>
 
     <form class="w-75 mx-auto">
      <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
