--- a/index.html
+++ b/index.html
@@ -9,11 +9,42 @@ const liffId = "1656759337-L7ngD1pq";
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
+
+<style>
+.frame {
+  height: 0;
+  overflow: hidden;
+}
+.sp .frame {
+  padding-top: 177.87%;
+}
+iframe {
+  transform-origin: 0 0;
+}
+.sp iframe {
+  margin-top: -177.87%;
+  transform: scale(0.6613);
+}
+</style>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+
+
+
+<script>
+jQuery(function($){
+  $(window).on('load resize', function(){
+    var sp_w = $('.sp .frame').width() / 375;
+    $('.sp iframe').css('transform', 'scale(' + sp_w + ')');
+  });
+});
+</script>
+
+
     <script>
         //パラメータ
         const params = (new URL(document.location)).searchParams;
@@ -60,10 +91,14 @@ const liffId = "1656759337-L7ngD1pq";
     <form class="w-75 mx-auto">
      <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
     </form>
+<div class="sp">
+<div class="frame">
     <blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
-    <script>
+</div>
+</div>
+<script>
 var sampleArea = document.getElementById("sampleArea");
-sampleArea.innerHTML = "表示したい文字列";
+sampleArea.innerHTML = key;
    </script>
 </body>
 </html>
