--- a/index.html
+++ b/index.html
@@ -86,20 +86,19 @@ jQuery(function($){
 
 </head>
 <body>
-    <div id="sampleArea">bb</div>
-
+    <div class="sp">
+    <div class="frame">
+       <blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
+    </div>
+    </div>
+    <div id="response">bb</div>
     <form class="w-75 mx-auto">
      <input type="submit" class="mt-4 btn btn-primary" value="問題へ">
     </form>
-<div class="sp">
-<div class="frame">
-    <blockquote class="line_timeline_embedded_post" data-baseurl="https://linevoom.line.me" data-postid="1163920241201046620" data-writerid="_daVWSk-9cz20oQ3SaQe2IqluqSL8HUnMcD02F2k"></blockquote>
-</div>
-</div>
+
 <script>
-var sampleArea = document.getElementById("sampleArea");
-sampleArea.innerHTML = key;
-   </script>
+    document.getElementById("response").innerHTML = key;
+</script>
 </body>
 </html>
 
