--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 #header h2 {
     padding-top: 13px;
 }
-#logo{font-family: 'Alegreya Sans SC', sans-serif;}
+#logo{font-family: 'Alegreya Sans SC', sans-serif; font-size: 1em;}
 
 
 
