--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ const liffId = "1656759337-L7ngD1pq";
     width: 100%;
     height: 50px;
     background: #ffffff;
+    border-top: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
     padding-top: 13px;
 }
