--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@ const liffId = "1656759337-L7ngD1pq";
     font-style: italic;
     text-align:center;
 }
-
 body{
     background-color: #eeeeee;
     font-family: 'Noto Sans JP', sans-serif;
@@ -148,7 +147,7 @@ jQuery(function($){
 
 </head>
 <body>
-
+<!--<title>Repetitive Practice In Chemistry</title>-->
 <header id="header">
 <h2 id="logo">Repetitive Practice In Chemistry</h2>
 </header>
