--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ jQuery(function($){
         //パラメータ
         const params = (new URL(document.location)).searchParams;
         const key = params.get('key');
- const key2 = params.get('key2');
+ 　　　　const key2 = params.get('key2');
 
         $(document).ready(function () {
             const liffId = "1656759337-L7ngD1pq";
@@ -188,7 +188,7 @@ jQuery(function($){
 <div class="video">
     <div class="sp">
     <div class="frame">
-<div class="responsevideo"></div>
+<div class="responsevideo">あ</div>
 </div>
 </div>
 </div>
