--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@ jQuery(function($){
 <div class="video">
     <div class="sp">
     <div class="frame">
-<div class="responsevideo">あ</div>
+
 </div>
 </div>
 </div>
 </div>
 
-
+yyy<div class="responsevideo">xxxx</div>
 
 
 <div id="explanation">
