--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@ jQuery(function($){
 </div>
 </div>
 
-yyy<div class="responsevideo">xxxx</div>
-
+yyy
+<div id="response">tt</div>
 
 <div id="explanation">
-<div id="response"></div>
+<div id="responsevideo">xxxx</div>
 </div>
 </div>
 
