--- a/index.html
+++ b/index.html
@@ -183,13 +183,17 @@ jQuery(function($){
 
 
 <h2 class="title"><span>Explanation</span></h2>
-
+zzzzzz
  <div class="box">
-   <div class="video">
-    <div class="sp"> 
-     <div class="frame">
          aaaaaaaaaaaaaa
   <div id="responsevideo">tt</div>
+     
+   <div class="video">
+bbbbb
+       <div class="sp"> 
+ccc
+           <div class="frame">
+               dddddd
      </div>
     </div>
    </div>
