--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ jQuery(function($){
         const params = (new URL(document.location)).searchParams;
         const key = params.get('key');
  　　　　const key2 = params.get('key2');
+ 　　　　const key3 = params.get('key3');
+ 　　　　const key4 = params.get('key4');
 
         $(document).ready(function () {
             const liffId = "1656759337-L7ngD1pq";
@@ -183,23 +185,15 @@ jQuery(function($){
 
 
 <h2 class="title"><span>Explanation</span></h2>
-zzzzzz
- <div class="box">
-         aaaaaaaaaaaaaa
-  <div id="responsevideo">tt</div>
-     
+ <div class="box">    
    <div class="video">
-bbbbb
        <div class="sp"> 
-ccc
-           <div class="frame">
-               dddddd
-     </div>
-    </div>
+         <div id="responsevideo">tt</div>
+         <div class="frame"></div>
+       </div>
    </div>
-    </div>
-bbbbbbbbbb
-    <div id="explanation">
+ </div>
+ <div id="explanation">
   <div id="response">tt</div>
  </div>
 
