--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ jQuery(function($){
  <div class="box">    
    <div class="video">
        <div class="sp"> 
-         <div id="responsevideo">tt</div>
-         <div class="frame"></div>
+         
+         <div class="frame"><div id="responsevideo">tt</div></div>
        </div>
    </div>
  </div>
