--- a/index.html
+++ b/index.html
@@ -189,11 +189,12 @@ jQuery(function($){
    <div class="video">
        <div class="sp"> 
          
-         <div class="frame"><div id="responsevideo">tt</div></div>
+         <div class="frame"><div id="responsevide">tt</div></div>
        </div>
    </div>
  </div>
  <div id="explanation">
+  <div id="responsevideo">tt</div>
   <div id="response">tt</div>
  </div>
 
